WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270775
Fix typos in comments of JSCJSValue.h
https://bugs.webkit.org/show_bug.cgi?id=270775
Summary
Fix typos in comments of JSCJSValue.h
Kim Sung Hyun
Reported
2024-03-10 18:46:45 PDT
It is the second bit which is set for non-numeric immediates and the second bit is bit 1. begining -> beginning
Attachments
Add attachment
proposed patch, testcase, etc.
Kim Sung Hyun
Comment 1
2024-03-10 18:59:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25696
EWS
Comment 2
2024-03-11 19:45:47 PDT
Committed
275951@main
(b2b0e1929a73): <
https://commits.webkit.org/275951@main
> Reviewed commits have been landed. Closing PR #25696 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-11 19:46:13 PDT
<
rdar://problem/124423774
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug