Fix typos in comments of JSCJSValue.h https://bugs.webkit.org/show_bug.cgi?id=270775

Reviewed by Keith Miller.

It is the second bit which is set for non-numeric immediates and the second bit is bit 1.

* Source/JavaScriptCore/runtime/JSCJSValue.h:

Canonical link: https://commits.webkit.org/275951@main